@@ -56,7 +56,7 @@ Rational::Rational (int n)
   den_= 1;
 }
 
-static
+static inline
 int gcd (int a, int b)
 {
   int t;
@@ -68,13 +68,6 @@ int gcd (int a, int b)
   return b;
 }
 
-#if 0
-static
-int lcm (int a, int b)
-{
-  return abs (a*b / gcd (a,b));
-}
-#endif
 
 void
 Rational::set_infinite (int s)
